flaskiservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: flaskiservice
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30000
  selector:
    app: flaski
