traeflaski_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traeflaski
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: flaski
