traefik_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaski
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: master #this is your domain...
    http:
      paths:
      - path: /
        backend:
          serviceName: traeflaski
          servicePort: http
